--- a/app/src/main/java/clothing4you/Login.form
+++ b/app/src/main/java/clothing4you/Login.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="itr0.Login">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="clothing4you.Login">
   <grid id="27dc6" binding="loginPanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -16,7 +16,6 @@
           <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="Icon.png"/>
           <text value=""/>
         </properties>
       </component>
