--- a/app/src/main/java/clothing4you/CheckoutPage.form
+++ b/app/src/main/java/clothing4you/CheckoutPage.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="clothing4you.itr0.CheckoutPage">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="clothing4you.CheckoutPage">
   <grid id="27dc6" binding="checkoutPanel" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="clothing4you/itr0/credit-card.png"/>
+          <icon value="clothing4you/credit-card.png"/>
           <text value=""/>
         </properties>
       </component>
