update the images on checkout and login so the program doesn't show "location" null error

--- a/app/src/main/java/clothing4you/Checkout.form
+++ b/app/src/main/java/clothing4you/Checkout.form
@@ -8,12 +8,11 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="ba68d" class="javax.swing.JLabel">
+      <component id="ba68d" class="javax.swing.JLabel" binding="creditImage">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="clothing4you/credit-card.png"/>
           <text value=""/>
         </properties>
       </component>
