--- a/app/src/main/java/clothing4you/Checkout.form
+++ b/app/src/main/java/clothing4you/Checkout.form
@@ -8,21 +8,12 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="ba68d" class="javax.swing.JLabel" binding="creditImage">
+      <component id="ba68d" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
-        </properties>
-      </component>
-      <component id="2e022" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font name="Times New Roman" size="28" style="1"/>
-          <text value="Checkout"/>
         </properties>
       </component>
       <component id="3d8f5" class="javax.swing.JLabel">
