--- a/app/src/main/java/clothing4you/Checkout.form
+++ b/app/src/main/java/clothing4you/Checkout.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="513" height="408"/>
     </constraints>
-    <properties/>
+    <properties>
+      <enabled value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="ba68d" class="javax.swing.JLabel" binding="iconLabel1">
@@ -185,6 +187,15 @@
         </constraints>
         <properties>
           <text value="Label"/>
+        </properties>
+      </component>
+      <component id="35fbf" class="javax.swing.JLabel" binding="totalLabel">
+        <constraints>
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Times New Roman" size="16" style="1"/>
+          <text value="Total:"/>
         </properties>
       </component>
     </children>
